# oh-my-analytics

./: .gitignore  README.md  config.yaml  main.py  pyproject.toml
agents/: de.md  ds.md  orchestrator.md  strategist.md
commands/: analyze.md  brainstorm.md  design.md  initialize.md  report.md
root/: CLAUDE.md
rules/: structure.md
skills/: eda.md  reporting.md  statistics.md  storytelling.md  strategy.md  visualization.md  workflow.md
src/pj-init/: eda_credit_risk.py
src/pj-init/report/: credit_risk_analysis.md
