[project]
name = "agentic-analytics"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "catboost>=1.2.8",
    "diskcache>=5.6.3",
    "duckdb>=1.4.3",
    "interpret>=0.7.4",
    "ipykernel>=7.1.0",
    "jupyter>=1.1.1",
    "lightgbm>=4.6.0",
    "llvmlite>=0.43.0",
    "matplotlib>=3.10.8",
    "numba>=0.59.0",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "pendulum>=3.1.0",
    "plotly>=6.5.2",
    "polars>=1.37.1",
    "pydantic>=2.12.5",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.0",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.6",
    "xgboost>=3.1.3",
]
